# snakemake-software-deployment-plugin-nix

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
docs/: intro.md  intro.md~
src/snakemake_software_deployment_plugin_nix/: __init__.py
tests/: test_plugin.py
tests/nix/: flake.nix
